add vm options to comment